--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="text">Mon Expérience.</div>
                 <p>Titulaire d’une licence professionnelle en administrateur des systèmes & réseaux
                     informatique, mais aussi des diplômes en programmation WEB/MOBILE.
-                    Actuellement J'ai CDI en qualité maintenance et d’administrateur des systèmes &
+                    Actuellement J'ai un CDI en qualité maintenance et d’administrateur des systèmes &
                     réseaux informatique à PATISEN.
                     Je suis le responsable informatique du site PATISEN MBAO qui regroupent trois (3) usines.
                     Je gère et mène tous les projets informatiques dudit site.
