--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                <p>Actuellement J’ai un CDI en qualité d’administrateur des systèmes & réseaux informatique à PATISEN. Je suis le responsable informatique du site PATISEN MBAO.
                 Je gère et mène tous les projets informatique dudit site.
                 Cependant je pilote tous les travaux informatique ainsi que les matériels du département dans les usines Mayonnaise, Margarine et Tamaro (SEL).
-            Je travaille aussi en freelance.</p>
+                Je travaille aussi en freelance.</p>
             <a href="https://drive.google.com/file/d/1OVN-qsYaejKoDpQr2LCpVCAJgav53je6/view?usp=sharing">Download CV</a>
            </div>
        </div> 
@@ -74,7 +74,7 @@
         <div class="serv-content">
             <div class="card">
                 <div class="box">
-                    <i class="fas fa-paint-brush"></i>
+                    <i class="fa-thin fa-laptop-code"></i>
                 <div class="text">Maintenance informatique</div>
                 <p>Maintenance systèmes & réseaux informatique</p> 
                </div>
