--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     Je suis à la recherche d’ébauche. C’est donc tout naturellement que je suis tourné vers votre
                     structure qui est un modèle au niveau du domaine de l’informatique. Grace à ma formation j’ai acquis une
                     vision globale de l’informatique. Je suis en mesure d’intégrer et de piloter les différentes
-                    opérations de la chaine de l’informatique.</p>
+                    opérations de la chaine de l’informatique. Je suis également le PDG de HTS Hight Tetchnology and Security qui regroupent de jeunes ingénieurs en informatique et Electrotechnique</p>
                 <a href="#">Read more</a>
             </div>
             <div class="column right">
