--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="serv-content">
             <div class="card">
                 <div class="box">
-                    <i class="fa-thin fa-laptop-code"></i>
+                    <i class="fa-duotone fa-code"></i>
                 <div class="text">Maintenance informatique</div>
                 <p>Maintenance systèmes & réseaux informatique</p> 
                </div>
