--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h2 class="title">About me</h2>
        <div class="about-content">
            <div class="column left">
-               <img src="image/hts.jpeg" alt="">
+               <img src="image/HTS.jpg" alt="">
            </div>
            <div class="column right">
                <div class="text">Je suis Birane, <span class="typing-2"></span></div>
