--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
                     <div class="line Maintenance"></div>
                 </div>
                 <div class="bars">
+                  <div class="info">
+                      <span>Office365</span>
+                      <span>100%</span>
+                  </div>
+                  <div class="line php"></div>
+              </div>
+                <div class="bars">
                     <div class="info">
                         <span>PHP</span>
                         <span>50%</span>
