--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                       <span>Office365</span>
                       <span>100%</span>
                   </div>
-                  <div class="line php"></div>
+                  <div class="line Office365"></div>
               </div>
                 <div class="bars">
                     <div class="info">
