--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 Je gère et mène tous les projets informatique dudit site.
                 Cependant je pilote tous les travaux informatique ainsi que les matériels du département dans les usines Mayonnaise, Margarine et Tamaro (SEL).
             Je travaille aussi en freelance.</p>
-            <a href="https://drive.google.com/file/d/1OVN-qsYaejKoDpQr2LCpVCAJgav53je6/view?usp=sharing">Download CV</a>
+            <a href="https://drive.google.com/file/d/11rzQV2WU27I1BDlDoBHO413bgMgup2oa/view?usp=share_link">Download CV</a>
            </div>
        </div> 
     </div>  
