--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
            </div>
            <div class="column right">
                <div class="text">Je suis Birane, <span class="typing-2"></span></div>
-               <p>Actuellement J’ai un CDI en qualité d’administrateur des systèmes & réseaux informatique à PATISEN. Je suis le responsable informatique du site PATISEN MBAO.
-                Je gère et mène tous les projets informatique dudit site.
-                Cependant je pilote tous les travaux informatique ainsi que les matériels du département dans les usines Mayonnaise, Margarine et Tamaro (SEL).
-            Je travaille aussi en freelance.</p>
+               <p>Actuellement en Contrat à Durée Indéterminée (CDI), j’occupe le poste d’Administrateur Systèmes et Réseaux au sein d’une entreprise agroalimentaire, où j’assure la fonction de Responsable Informatique sur l’un des principaux sites de production.
+                Je suis en charge de la gestion complète des projets informatiques du site : de l’analyse des besoins à la mise en œuvre des solutions techniques, en passant par la supervision du support utilisateur. 
+                Mon rôle englobe également le pilotage des infrastructures informatiques des départements Mayonnaise, Margarine et Tamaro (SEL), où je coordonne l’ensemble des travaux ainsi que la gestion du parc matériel.
+                Parallèlement à mes fonctions en entreprise, j’exerce en freelance en tant que CEO de HTS (High Tech Solutions), une entreprise spécialisée dans la sécurité informatique et électronique.
+                 À travers HTS, je propose des solutions innovantes dans les domaines de la vidéosurveillance, de la cybersécurité, du contrôle d’accès et de la gestion réseau, répondant aux besoins variés des entreprises et institutions.</p>
             <a href="https://drive.google.com/file/d/11rzQV2WU27I1BDlDoBHO413bgMgup2oa/view?usp=share_link">Download CV</a>
            </div>
        </div> 
@@ -104,16 +105,14 @@
         <div class="skills-content">
             <div class="column left">
                 <div class="text">Mon Expérience.</div>
-                <p>Titulaire d’une licence professionnelle en administrateur des systèmes & réseaux
-                    informatique, mais aussi des diplômes en programmation WEB/MOBILE.
-                    Actuellement J'ai CDI en qualité maintenance et d’administrateur des systèmes &
-                    réseaux informatique à PATISEN.
-                    Je suis le responsable informatique du site PATISEN MBAO qui regroupent trois (3) usines.
-                    Je gère et mène tous les projets informatiques dudit site.
-                    Je suis à la recherche d’ébauche. C’est donc tout naturellement que je suis tourné vers votre
-                    structure qui est un modèle au niveau du domaine de l’informatique. Grace à ma formation j’ai acquis une
-                    vision globale de l’informatique. Je suis en mesure d’intégrer et de piloter les différentes
-                    opérations de la chaine de l’informatique.</p>
+                <p>Je suis Administrateur Systèmes & Réseaux, passionné par les technologies de l'information, actuellement en CDI dans une entreprise de la place, où j’assure la gestion informatique complète du site, regroupant trois grandes usines de production. 
+                  En tant que responsable des infrastructures IT, je pilote les projets informatiques du site, de la phase de conception jusqu’au déploiement, tout en assurant la maintenance, la sécurité et l’optimisation du parc informatique.
+                  Parallèlement, je suis fondateur et CEO de HTS (High Tech Solutions), une entreprise spécialisée dans la sécurité informatique et électronique. Nous accompagnons des structures variées dans la mise en place de solutions de vidéosurveillance, contrôle d’accès, cybersécurité, réseaux et infogérance.
+                  Notre expertise nous a permis de mener à bien plusieurs chantiers d’envergure, notamment pour :
+                  STTP (Société Tunisienne des Travaux Publics)
+                  Les forces armées
+                  Junior Trading, entre autres.
+                  Ma mission : concevoir, sécuriser et faire évoluer les systèmes d’information pour offrir performance, fiabilité et innovation aux organisations..</p>
                 <a href="#">Read more</a>
             </div>
             <div class="column right">
