--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
         </div>  
         <div class="card">
             <div class="box">
-                <img src="image/soh.jpeg" alt="">
-            <div class="text">Sohinbou</div>
+                <img src="image/Adr.jpeg" alt="">
+            <div class="text">ADRIEN</div>
             <p>Ingenieur systèmes sécurité & Electrotechnicien</p>
             </div>
             </div> 
